fixed manage pages lots of refactoring added BudgetService

--- a/MyWebsite/Views/Account/ForgotPassword.cshtml
+++ b/MyWebsite/Views/Account/ForgotPassword.cshtml
@@ -1,22 +1,25 @@
 ﻿@model ForgotPasswordViewModel
 <link rel="stylesheet" href="~/css/materialize.css" />
 
-<h3 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">FORGOT PASSWORD</h3>
+<h3 style="text-align:center; margin-top:100px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">FORGOT PASSWORD</h3>
 
 <div style="width: 30%; margin-left: 150px; margin-top: 150px;">
     <div class="row">
-        <div class="col-s6">
+        <div class="col-sm-6">
             <h4 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">Enter Your Email</h4>
             <div class="row">
                 <div class="col-md-4">
                     <form asp-action="ForgotPassword" method="post">
-                        <div class="form-group">
+                        <div>
                             <label class="textGrey" asp-for="Email"></label>
-                            <input asp-for="Email" style="color: #cfd8dc"/>
+                            <input asp-for="Email" style="color: #cfd8dc" />
                             <span asp-validation-for="Email"></span>
                         </div>
                         <button style="margin-top:10px; background-color:#81cac4; font-weight:bold;" type="submit" class=" waves-effect waves-light lightTeal-hover btn sharpCorners black-text">Reset Password</button>
                     </form>
+                </div>
+                <div style="margin-top: 10px;">
+                    <a class="hover-underline" onclick="window.history.go(-1)">Cancel</a>
                 </div>
             </div>
         </div>
@@ -26,6 +29,3 @@
 <div style="height:300px;"></div>
 
 
-@section Scripts {
-    @await Html.PartialAsync("_ValidationScriptsPartial")
-}
