--- a/MyWebsite/Views/Account/Login.cshtml
+++ b/MyWebsite/Views/Account/Login.cshtml
@@ -16,53 +16,39 @@
 }
 
 <h3 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">LOGIN</h3>
+
 <div style="width:30%; margin-left: 150px; margin-top:150px;">
     <div>
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">Enter Your Account Information</h4>
-                <div class="form-group">
-                    <label class="textGrey" asp-for="Email"></label>
-                    <input asp-for="Email" style="color: #cfd8dc" />
+                <h4 style="text-align:center; margin-top:100px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">Enter Your Account Information</h4>
+                <div>
+                    <label class="textGrey">Username</label>
+                    <input asp-for="Email" style="color:#cfd8dc" />
                     <span asp-validation-for="Email"></span>
                 </div>
-                <div class="form-group">
+                <div>
                     <label class="textGrey" asp-for="Password"></label>
-                    <input asp-for="Password" style="color: #cfd8dc" />
+                    <input asp-for="Password" style="color:#cfd8dc" />
                     <span asp-validation-for="Password"></span>
                 </div>
-                <div class="form-group">
-                    <div input type="checkbox">
-                        <label class="textGrey" asp-for="RememberMe">
-                            <input  asp-for="RememberMe" style="color: #cfd8dc" />
-                            @Html.DisplayNameFor(m => m.RememberMe)
-                        </label>
-                    </div>
-                </div>
                 @Html.Hidden("AppType", appType)
-                <div class="form-group">
+                <div>
                     <div><p style="color: #D50000;">@error</p></div>
                     <button type="submit" class="waves-effect waves-light btn lightTeal-hover sharpCorners black-text" style="background-color: #81cac4; font-weight: bold;">Log in</button>
                 </div>
-                <div class="form-group">
-                    <p><a asp-action="ForgotPassword">Forgot your password?</a></p>
-                    <p><a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a></p>
+                <div>
+                    <p><a class="hover-underline" asp-action="ForgotPassword">Forgot your password?</a></p>
+                    <p><a class="hover-underline" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a></p>
                 </div>
             </form>
+            <div style="margin-top: 10px;">
+                <a class="hover-underline" onclick="window.history.go(-1)">Cancel</a>
+            </div>
         </section>
     </div>
 </div>
 
 <div style="height:300px;"></div>
 
-<style>
-    .field-validation-error {
-        color: #D50000 !important;
-    }
-</style>
-
-
-@section Scripts {
-    @await Html.PartialAsync("_ValidationScriptsPartial")
-}
 
