--- a/MyWebsite/Views/Account/Register.cshtml
+++ b/MyWebsite/Views/Account/Register.cshtml
@@ -2,31 +2,33 @@
 <link rel="stylesheet" href="~/css/materialize.css" />
 
 
-<h3 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">REGISTER</h3>
-
+<h3 style="text-align:center; margin-top:100px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">REGISTER</h3>
 
 <div style="margin:50px 100px;">
     <div class="row">
         <div class="col s6">
             <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
                 <h4 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">Create a New Account</h4>
-                <div class="form-group">
-                    <label class="textGrey" asp-for="Email"></label>
+                <div>
+                    <label class="textGrey">Email (username)</label>
                     <input asp-for="Email" style="color: #cfd8dc"/>
                     <span asp-validation-for="Email"></span>
                 </div>
-                <div class="form-group">
+                <div>
                     <label class="textGrey" asp-for="Password"></label>
                     <input asp-for="Password"  style="color: #cfd8dc"/>
                     <span asp-validation-for="Password"></span>
                 </div>
-                <div class="form-group">
+                <div>
                     <label class="textGrey" asp-for="ConfirmPassword"></label>
                     <input asp-for="ConfirmPassword" style="color: #cfd8dc"/>
                     <span asp-validation-for="ConfirmPassword" style="color: #cfd8dc" ></span>
                 </div>
                 <button style="margin-top:10px; background-color:#81cac4; font-weight:bold;" type="submit" class=" waves-effect waves-light lightTeal-hover btn sharpCorners black-text">Register</button>
             </form>
+            <div style="margin-top: 10px;">
+                <a class="hover-underline" onclick="window.history.go(-1)">Cancel</a>
+            </div>
         </div>
     </div>
 </div>
@@ -34,7 +36,4 @@
 <div style="height:300px;"></div>
 
 
-@section Scripts {
-    @await Html.PartialAsync("_ValidationScriptsPartial")
-}
 
