--- a/MyWebsite/Views/Manage/ChangePassword.cshtml
+++ b/MyWebsite/Views/Manage/ChangePassword.cshtml
@@ -1,35 +1,35 @@
 ﻿@model ChangePasswordViewModel
-@{
-    ViewData["Title"] = "Change password";
-    ViewData.AddActivePage(ManageNavPages.ChangePassword);
-}
+@{ViewData.AddActivePage(ManageNavPages.ChangePassword);}
 
-<h4>@ViewData["Title"]</h4>
+<h3 style="text-align:center; margin-top:100px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">CHANGE PASSWORD</h3>
+
 @Html.Partial("_StatusMessage", Model.StatusMessage)
-<div class="row">
-    <div class="col-md-6">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="OldPassword"></label>
-                <input asp-for="OldPassword" class="form-control" />
-                <span asp-validation-for="OldPassword" class="text-danger"></span>
+<div style="margin:50px 100px;">
+    <div class="row">
+        <div class="col s6">
+            <form method="post">
+                <div>
+                    <label class="textGrey"  asp-for="OldPassword"></label>
+                    <input asp-for="OldPassword" style="color: #cfd8dc" />
+                    <span asp-validation-for="OldPassword"></span>
+                </div>
+                <div>
+                    <label class="textGrey"  asp-for="NewPassword"></label>
+                    <input asp-for="NewPassword" style="color: #cfd8dc" />
+                    <span asp-validation-for="NewPassword"></span>
+                </div>
+                <div>
+                    <label class="textGrey"  asp-for="ConfirmPassword"></label>
+                    <input asp-for="ConfirmPassword" style="color: #cfd8dc" />
+                    <span asp-validation-for="ConfirmPassword"></span>
+                </div>
+                <button style="margin-top:10px; background-color:#81cac4; font-weight:bold;" type="submit" class=" waves-effect waves-light lightTeal-hover btn sharpCorners black-text">Update Password</button>
+            </form>
+            <div style="margin-top: 10px;">
+                <a class="hover-underline" onclick="window.history.go(-1)">Cancel</a>
             </div>
-            <div class="form-group">
-                <label asp-for="NewPassword"></label>
-                <input asp-for="NewPassword" class="form-control" />
-                <span asp-validation-for="NewPassword" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword"></label>
-                <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-default">Update password</button>
-        </form>
+        </div>
     </div>
 </div>
 
-@section Scripts {
-    @await Html.PartialAsync("_ValidationScriptsPartial")
-}
+<div style="height:300px;"></div>
