--- a/MyWebsite/Views/Manage/Index.cshtml
+++ b/MyWebsite/Views/Manage/Index.cshtml
@@ -1,44 +1,37 @@
 ﻿@model IndexViewModel
+@inject SignInManager<ApplicationUser> SignInManager
+@Html.Partial("_StatusMessage", Model.StatusMessage)
+
 @{
-    ViewData["Title"] = "Profile";
-    ViewData.AddActivePage(ManageNavPages.Index);
+    var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
+    //ViewData.AddActivePage(ManageNavPages.Index);
 }
 
-<h4>@ViewData["Title"]</h4>
-@Html.Partial("_StatusMessage", Model.StatusMessage)
-<div class="row">
-    <div class="col-md-6">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
+
+<h3 style="text-align:center; margin-top:100px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">MANAGE YOUR ACCOUNT</h3>
+<div><p style="text-align: center; margin-top: 10px; color: #81cac4;">@ViewBag.Updated</p></div>
+<div style="margin:50px 100px;">
+    <div class="row">
+        <div class="col s6">
+            <form method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label class="textGrey">Change Email</label>
+                    <input asp-for="Email" class="form-control" style="color:#cfd8dc" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <button style="margin-top:10px; background-color:#81cac4; font-weight:bold;" type="submit" class=" waves-effect waves-light lightTeal-hover btn sharpCorners black-text">Save Changes</button>
+            </form>
+            <div style="margin-top: 10px;">
+                <p><a class="hover-underline" asp-action="ChangePassword">Change Password</a></p>
+                <p><a class="hover-underline" onclick="window.history.go(-1)">Cancel</a></p>
+                @*@await Html.PartialAsync("_ManageNav")*@
             </div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                @if (Model.IsEmailConfirmed)
-                {
-                    <div class="input-group">
-                        <input asp-for="Email" class="form-control" />
-                        <span class="input-group-addon" aria-hidden="true"><span class="glyphicon glyphicon-ok text-success"></span></span>
-                    </div>
-                }
-                else
-                {
-                    <input asp-for="Email" class="form-control" />
-                    <button asp-action="SendVerificationEmail" class="btn btn-link">Send verification email</button>
-                }
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-default">Save</button>
-        </form>
+        </div>
     </div>
 </div>
+
+<div style="height:300px;"></div>
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
