--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -23,7 +23,7 @@
     <div class="container" style="margin-top:20px;">
         <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.typeError</p>
         <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.costError</p>
-        <p style="text-align:center; font-weight:bold; color:#81cac4; margin-top:10px;">@TempData["successTransactionAdded"]</p>
+        <p style="text-align:center; font-weight:bold; color:#81cac4; margin-top:10px;">@ViewBag.SuccessTransactionAdded</p>
     </div>
     <div class="row">
         <div class="col s12 m12 l4"></div>
